--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,12 +10,17 @@
         <activity
             android:name=".activitys.MainActivity"
             android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".activitys.MusicSortActivity"
+            android:label="@string/title_activity_music_sort" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
