--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.1.1'
+    compile files('src/main/libs/gson-2.2.4.jar')
 }
