--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,22 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.designers.kuwo" >
+    package="com.designers.kuwo">
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
     <application
+        android:name=".activitys.CustomApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".activitys.CustomApplication"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".activitys.MainActivity"
-            android:label="@string/app_name" >
-        </activity>
+            android:label="@string/app_name"></activity>
         <activity
             android:name=".activitys.PersonalInforSetActivity"
-            android:label="@string/title_activity_personal_infor_set" >
+            android:label="@string/title_activity_personal_infor_set">
+
+        </activity>
+        <activity
+            android:name=".activitys.LoginActivity"
+            android:label="@string/title_activity_login"></activity>
+        <activity
+            android:name=".activitys.Register"
+            android:label="@string/title_activity_register">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,16 +33,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activitys.LoginActivity"
-            android:label="@string/title_activity_login" >
-        </activity>
-        <activity
-            android:name=".activitys.Register"
-            android:label="@string/title_activity_register" >
-        </activity>
-        <activity
             android:name=".activitys.Waiting"
-            android:label="@string/title_activity_waiting" >
+            android:label="@string/title_activity_waiting">
 
         </activity>
     </application>
