--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,46 +12,46 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
+
+        <!--主页-->
         <activity
             android:name=".activitys.MainActivity"
-            android:label="@string/app_name"></activity>
-        <activity
-            android:name=".activitys.PersonalInforSetActivity"
-            android:label="@string/title_activity_personal_infor_set">
+            android:label="@string/app_name">
 
-        </activity>
-        <activity
-            android:name=".activitys.LoginActivity"
-            android:label="@string/title_activity_login">
-
-
-        </activity>
-        <activity
-            android:name=".activitys.Register"
-            android:label="@string/title_activity_register">
-
-        </activity>
-        <activity
-            android:name=".activitys.Waiting"
-            android:label="@string/title_activity_waiting">
-        </activity>
-
-        <activity
-            android:name=".activitys.MusicSortActivity"
-            android:label="@string/title_activity_music_sort"
-            android:theme="@android:style/Theme.Holo.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".activitys.MusicSingerPageActivity"
-            android:theme="@android:style/Theme.Holo.NoActionBar">
-        </activity>
 
-        <activity android:name=".activitys.MusicAlbumPageActivity"
-            android:theme="@android:style/Theme.Holo.NoActionBar"/>
+        <activity android:name=".activitys.MusicFormActivity" />
+
+        <activity android:name=".activitys.FromMusicActivity" />
+
+        <activity
+            android:name=".activitys.LikeMusicActivity"
+            android:theme="@style/AppTheme.TransparentActivity" />
+
+        <activity
+            android:name=".activitys.SingleMusicActivity"
+            android:theme="@style/AppTheme.TransparentActivity" />
+
+        <activity
+            android:name=".activitys.RecentMusicActivity"
+            android:theme="@style/AppTheme.TransparentActivity" />
+
+        <activity
+            android:name=".activitys.PersonalInforSetActivity"
+            android:label="@string/title_activity_personal_infor_set" />
+
+        <activity
+            android:name=".activitys.MusicSortActivity"
+            android:label="@string/title_activity_music_sort" />
+
+        <activity android:name=".activitys.MusicSingerPageActivity" />
+
+
+        <activity android:name=".activitys.MusicAlbumPageActivity" />
     </application>
 </manifest>
